<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:id="@id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center_horizontal"
                android:paddingBottom="4.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contribute_intro" />
            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contribute_translate_title" />
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contribute_translate_description" />
            <Button
                android:layout_gravity="center_horizontal"
                android:id="@id/btnTranslate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contribute_translate_go"
                android:onClick="btnTranslate_clicked" />
            <TextView
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contribute_bugs_title" />
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contribute_bugs_description" />
            <Button
                android:layout_gravity="center_horizontal"
                android:id="@id/btnBugs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contribute_bugs_go"
                android:onClick="btnBugs_clicked" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>