<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:id="@id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0">
                    <TextView
                        android:textAppearance="?android:textAppearanceLarge"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:layout_weight="1.0" />
                    <TextView
                        android:textAppearance="?android:textAppearanceSmall"
                        android:gravity="center"
                        android:id="@id/tvVersion"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0" />
                </LinearLayout>
                <ImageView
                    android:id="@id/ivLogo"
                    android:layout_width="64.0dip"
                    android:layout_height="64.0dip"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="64.0dip"
                    android:layout_height="64.0dip"
                    android:src="@drawable/robinj"
                    android:scaleType="fitCenter" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0">
                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/developed_by"
                        android:layout_weight="1.0"
                        style="@style/developer_by" />
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0">
                        <TextView
                            android:textAppearance="?android:textAppearanceSmall"
                            android:gravity="center"
                            android:id="@id/tvDevUrl"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="RobinJ.be"
                            android:layout_weight="2.0" />
                        <TextView
                            android:textAppearance="?android:textAppearanceSmall"
                            android:gravity="center"
                            android:id="@id/tvDevEmail"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="distrohopper@robinj.be"
                            android:layout_weight="1.0" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.0dip">
                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/honourable_mentions" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hm_timvdstaaij_name"
                        style="@style/honourable_mentions_name" />
                    <TextView
                        android:textAppearance="?android:textAppearanceSmall"
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hm_timvdstaaij_why" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hm_todddavies_name"
                        style="@style/honourable_mentions_name" />
                    <TextView
                        android:textAppearance="?android:textAppearanceSmall"
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hm_todddavies_why" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textAppearance="?android:textAppearanceMedium"
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hm_translators_name"
                        style="@style/honourable_mentions_name" />
                    <TextView
                        android:textAppearance="?android:textAppearanceSmall"
                        android:gravity="center"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hm_translators_why" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>